# moonbeam

./: .coderabbit.yaml  .dockerignore  .ecrc  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp.json  .npmrc  .prettierignore  .prettierrc.json  .rustfmt.toml  .rusty-hook.toml  AUTOMATION.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTIONS.md  Cargo.toml  Dockerfile  Makefile  PERF.md  README.md  RELEASE.md  SECURITY.md  biome.json  bug-bounty.md  crates.js  docker-compose.yml  file_header.txt  help.html  index.html  launch-notes.md  moonbase-dev.json  moonbase-orbiters.json  moonbeam-raw.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr_desc.md  (+16 more)
client/eth-log-indexer/: Cargo.toml  sqlx-data.json
client/eth-log-indexer/src/: backend.rs  lib.rs  sync_worker.rs
client/evm-tracing/: Cargo.toml
client/evm-tracing/src/: lib.rs
client/nimbus-poc/: Cargo.toml
client/nimbus-poc/src/: import_queue.rs  lib.rs
client/vrf/: Cargo.toml  issue.md
client/vrf/src/: digest.rs  lib.rs
core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
node/: Cargo.toml  mock_inherents.rs
node/cli/: Cargo.toml  build.rs
node/cli-opt/: Cargo.toml
node/cli-opt/src/: account_key.rs  lib.rs
node/cli/src/: cli.rs  command.rs  command_helper.rs  lib.rs  parse.rs
node/parachain/: Cargo.toml  build.rs
node/parachain/src/: chain_spec.rs  cli.rs  command.rs  dev_service.rs  main.rs  rpc.rs  service.rs
node/perf-test/: Cargo.toml
node/perf-test/src/: command.rs  lib.rs  mocks.rs  sysinfo.rs  txn_signer.rs
node/rpc/: Cargo.toml
node/rpc-client/: Cargo.toml
node/rpc-client/src/: lib.rs
node/rpc/src/: lib.rs  pubsub_hotfixes.rs  server_hotfixes.rs
node/service/: Cargo.toml
node/service/src/: builder.rs  client.rs  command_helper.rs  externalities.rs  frontier.rs  inherents.rs  lib.rs  rpc.rs
node/src/: chain_spec.rs  cli.rs  command.rs  dev_service.rs  inherents.rs  main.rs  mock_inherents.rs  mock_timestamp.rs  rpc.rs  service.rs  sproof.rs  test_spec.rs  tests.rs
node/src/tests/: build_mnemonic_based_spec_works.rs  common.rs  export_blocks_works.rs  export_genesis_state_works.rs  mod.rs  purge_chain_works.rs  tests.rs
node/standalone/: Cargo.toml  build.rs
node/standalone/src/: chain_spec.rs  cli.rs  command.rs  main.rs  mock_timestamp.rs  rpc.rs  service.rs
pallets/asset-manager/: Cargo.toml
pallets/asset-manager/src/: benchmarks.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/author/: Cargo.toml
pallets/author-filter/: Cargo.toml
pallets/author-filter/src/: lib.rs
pallets/author-inherent/: Cargo.toml
pallets/author-inherent/src/: benchmarking.rs  lib.rs
pallets/author-mapping/: Cargo.toml  migrations.md
pallets/author-mapping/src/: benchmarks.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/author/src/: lib.rs
pallets/celestia-offchain-worker/: Cargo.toml
pallets/celestia-offchain-worker/src/: lib.rs
pallets/common-benchmarks/: Cargo.toml
pallets/common-benchmarks/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/crowdloan-rewards/: Cargo.toml
pallets/crowdloan-rewards/src/: benchmarks.rs  lib.rs  mock.rs  new_tests.rs  tests.rs  weights.rs
pallets/erc-factory/: Cargo.toml
pallets/erc-factory/contract/: ERC20PresetMinterBurner.sol  README.md  bytecode.txt
pallets/erc-factory/src/: lib.rs
pallets/erc20-xcm-bridge/: Cargo.toml
pallets/erc20-xcm-bridge/src/: erc20_matcher.rs  erc20_trap.rs  errors.rs  lib.rs  mock.rs  notional.rs  tests.rs  types.rs  xcm_exec_filter.rs  xcm_holding_ext.rs
pallets/ethereum-chain-id/: Cargo.toml
pallets/ethereum-chain-id/src/: lib-old.rs  lib.rs
primitives/: Cargo.toml
primitives/account/: Cargo.toml
primitives/account/src/: lib.rs
primitives/bridge/common/: Cargo.toml
primitives/bridge/moonbase/: Cargo.toml
primitives/bridge/moonbeam/: Cargo.toml
primitives/bridge/moonriver/: Cargo.toml
primitives/bridge/xcm-bridge/: Cargo.toml
primitives/bridge/xcm-bridge-router/: Cargo.toml
primitives/currencies/: Cargo.toml
primitives/currencies/src/: currencies.rs  lib.rs
primitives/ext/: Cargo.toml
primitives/ext/src/: lib.rs
primitives/proof/: Cargo.toml  proof
primitives/proof/src/: lib.rs
primitives/relay-encoder/: Cargo.toml
primitives/relay-encoder/src/: lib.rs
primitives/rpc/debug/: Cargo.toml
primitives/rpc/evm-tracing-events/: Cargo.toml
primitives/rpc/trace/: Cargo.toml
primitives/rpc/txpool/: Cargo.toml
primitives/runtime/: Cargo.toml
primitives/runtime-api/: Cargo.toml
primitives/runtime-api/src/: lib.rs
primitives/runtime/src/: lib.rs
primitives/session-keys/: Cargo.toml
primitives/session-keys/src/: digest.rs  exec.rs  inherent.rs  lib.rs  runtime_api.rs  traits.rs  vrf.rs
primitives/storage-proof/: Cargo.toml  benchmark_proofs
primitives/storage-proof/src/: lib.rs  tests.rs
primitives/tests-primitives/: Cargo.toml
primitives/tests-primitives/src/: lib.rs
primitives/vrf/: Cargo.toml
primitives/vrf/src/: lib.rs
primitives/xcm/: Cargo.toml
primitives/xcm/src/: asset_id_conversions.rs  assets_traits.rs  barriers.rs  lib.rs  (+12 more)
runtime/: Cargo.toml  build.rs
runtime/account/: Cargo.toml
runtime/assethub-encoder/: Cargo.toml
runtime/combined/: Cargo.toml
runtime/common/: Cargo.toml
runtime/constants/: Cargo.toml
runtime/evm_tracer/: Cargo.toml
runtime/moonbase/: Cargo.toml  build.rs
runtime/moonbeam/: Cargo.toml  build.rs
runtime/moonriver/: Cargo.toml  build.rs
runtime/moonshadow/: Cargo.toml
runtime/parachain/: Cargo.toml  build.rs
runtime/precompiles/: Cargo.toml
runtime/relay-encoder/: Cargo.toml
runtime/relay_encoder/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs  parachain.rs  runtime.rs  standalone.rs
runtime/standalone/: Cargo.toml
runtime/summarize-precompile-checks/: Cargo.toml
runtime/tests/: integration_test.rs
runtime/tracing_hook/: Cargo.toml
simnode/: Cargo.toml
simnode/src/: chain.rs  cli.rs  client.rs  events.rs  main.rs  runtime_upgrade.rs
triplet/: Cargo.toml
triplet/src/: main.rs
(+11279 files in other folders)
